# dswe-inman-lyons

./: .gitignore  .gitmodules  README.md  chirps_monthly_by_regions.csv  dswe-inman-lyons-figures.pptx  pyproject.toml  requirements.txt
.github/: pull_request_template.md
IL Supplementary Materials/: Data S4 Inundation extents.csv
figures/: registry.csv
notebooks/: # Mass Balance — GRACE-aligned (3 mascon.prompt.md  CYGNSS Okavango – Front-Normal Velocity.ipynb  CYGNSS Okavango – Front-Normal Velocity_2026-03-01.ipynb  Download CYGNSS data.ipynb  ET comparison over the delta.ipynb  ET comparison over the delta_2026-03-06.ipynb  GRACE.ipynb  GRACE_2026-02-25.ipynb  GRDC timeseries.ipynb  GRDC timeseries_2026-02-28.ipynb  Mohembo time series.ipynb  Mohembo time series_2026-02-25.ipynb  OSM features.ipynb  OSM features_2026-03-08.ipynb  SWOT okavango download.ipynb  SWOT okavango download_2025-10-09.ipynb  annual_flood_area_km2.csv  bucket_to_gee.ipynb  bucket_to_gee_2026-02-28.ipynb  cygnss_okavango_daily_regions.ipynb  download CYGNSS data_2026-03-08.ipynb  download Chirps.ipynb  download Chirps_2026-03-08.ipynb  dswe_IL_compare.ipynb  dswe_IL_compare_2026-02-24.ipynb  dswe_image_export.ipynb  dswe_image_export_2026-02-24.ipynb  fig_study_area.ipynb  flood_prediction_okavango.ipynb  gee_asset_management.ipynb  gee_make_public.ipynb  gee_make_public_2026-02-28.ipynb  manage_gee_assets_okavango.ipynb  manage_gee_assets_okavango_2026-02-28.ipynb  mass_balance_grace_1block_ne.ipynb  mass_balance_grace_2east.ipynb  mass_balance_grace_aligned.ipynb  okavango_regions.gpkg
(+30 files in other folders)
